src/test/resources/success/emptydate/Problem1.scala
package success.emptydate

import forcedtodo.todo

@todo("Is fine")
class Problem1 {
}


