src/test/resources/fail/basic/Problem2.scala
package fail.basic

import forcedtodo.todo

@todo("Something", until = "1990-08-04")
class Problem2 {
}



